--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+# This crate implements a basic BIOS bootloader without any C dependencies
 bootloader = "0.9"
